Fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -36,54 +36,63 @@ input.cat1{
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat2{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat3{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat4{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat5{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat6{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat7{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat8{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 input.cat9{
 	display: inline block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 150%;
+	margin-top: 5px;
 }
 div.options{
 	display: block;
